:link: Added overflow css to close buttons to fix focus issue on iPhone

--- a/src/global-header/_global-header.scss
+++ b/src/global-header/_global-header.scss
@@ -363,6 +363,7 @@ $alpha: .5;
       margin-left: 16px;
       margin-right: 16px;
       margin-top: 22px;
+      overflow: hidden;
       text-align: left;
       text-indent: -9999px;
       width: 40px;
