--- a/src/global-navigation/_global-navigation.scss
+++ b/src/global-navigation/_global-navigation.scss
@@ -31,6 +31,7 @@
         background-position: center;
         background-repeat: no-repeat;
         height: 40px;
+        overflow: hidden;
         position: absolute;
         right: 24px;
         text-indent: -9999px;
